sample/error/e02705-i.asn
E02705-I DEFINITIONS ::=
BEGIN
    setof SET OF int INTEGER ::= {  -- E02705-I
        100, 200, 300, 400
    }
END
